@@ -26,6 +26,8 @@
 extern "C" {
 #endif
 
+
+char *get_preverse_header(char * module_name, char * key, int pvHeading);
 char *get_module_key(void);
 char *get_module_name(void);
 char *get_footnote_body(char *note);
