@@ -1,3 +1,8 @@
+2003-12-14  Terry <tbiggs@users.sf.net>
+
+	* added support for preverse headings
+
+
 2003-12-13  Terry <tbiggs@users.sf.net>
 
 	* Made editors use dialogs - removed options
